# skrizhal

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  capture-screenshots.sh  dev-build.sh  plan.md  publish-flatpak.sh
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: date.rs  entry.rs  filter.rs  health.rs  import.rs  lib.rs  profile.rs  registry.rs  sort.rs  tags.rs  validate.rs
packaging/: cargo-sources.json  io.github.calstfrancis.Skrizhal.desktop  io.github.calstfrancis.Skrizhal.metainfo.xml  io.github.calstfrancis.Skrizhal.yml
screenshots/: demo-cv-elements.yaml
src/: config.rs  date.rs  entry.rs  filter.rs  git_backup.rs  lib.rs  main.rs  registry.rs  tags.rs  validate.rs
src/ui/: app_window.rs  changelog.rs  detail.rs  dialogs.rs  field_guide.rs  health.rs  history.rs  mod.rs  profiles.rs  sidebar.rs  spreadsheet.rs  state.rs
