[package]
name = "skrizhal"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "YAML editor/reader for CV elements, callable from Zerkalo in CV mode"
homepage = "https://github.com/calstfrancis/skrizhal"
repository = "https://github.com/calstfrancis/skrizhal"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
