[package]
name = "skrizhal"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "YAML editor/reader for CV elements, callable from Zerkalo in CV mode"
homepage = "https://github.com/calstfrancis/skrizhal"
repository = "https://github.com/calstfrancis/skrizhal"

[dependencies]
glib = { version = "0.22.8", features = ["v2_66"] }
gtk4 = { version = "0.11.4", features = ["v4_10"] }
libadwaita = { version = "0.9.2", features = ["v1_4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
shellexpand = "3.1.2"
thiserror = "2.0.18"
toml = "1.1.2"

[dev-dependencies]
tempfile = "3.27.0"
