[workspace]
members = ["core"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tempfile = "3.27.0"

[package]
name = "skrizhal"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "YAML editor/reader for CV elements, callable from Zerkalo in CV mode"
homepage = "https://github.com/calstfrancis/skrizhal"
repository = "https://github.com/calstfrancis/skrizhal"

[dependencies]
skrizhal-core = { path = "core" }
glib = "0.18"
gtk4 = { version = "0.7", features = ["v4_10"] }
libadwaita = { version = "0.5", features = ["v1_4"] }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
shellexpand = "3.1.2"
thiserror = { workspace = true }
toml = "1.1.2"

[dev-dependencies]
tempfile = { workspace = true }
